# rusty-robot

./: .gitignore  README.md
docs/best_practices/: README.md  modeling.md
docs/new_robot/: README.md
firmware/: .gitignore  Cargo.toml  README.md
firmware/common/: Cargo.toml
firmware/common/src/: lib.rs
firmware/components/esp32/: .gitignore  Cargo.toml  README.md  wokwi.toml
firmware/components/esp32/.cargo/: config.toml
firmware/components/esp32/examples/: mesh-benchmark.rs  mesh-hello.rs
firmware/components/esp32/src/: lib.rs
firmware/components/esp32/src/mesh/: mod.rs
firmware/drivers/: Cargo.toml
firmware/drivers/src/: gnns.rs  imu_traits.rs  lib.rs
firmware/drivers/src/imu/: icm42688.rs  imu_traits.rs  mod.rs
firmware/drivers/src/radio/: csrf.rs  mod.rs
firmware/drivers/src/radio/mesh/: README.md  mod.rs
firmware/flight_controllers/: Cargo.toml  README.md
firmware/flight_controllers/docs/: design.md
firmware/flight_controllers/f405/: Cargo.toml  Embed.toml  README.md
firmware/flight_controllers/f405.baremetal/: Cargo.toml  build.rs  stm32f405.svd.svd
firmware/flight_controllers/f405.baremetal/src/: main.rs
firmware/flight_controllers/f405/.cargo/: config.toml
firmware/flight_controllers/f405/examples/: hello_world.rs
firmware/flight_controllers/gazebo/: Cargo.toml  README.md
firmware/flight_controllers/gazebo-quadcopter/: Cargo.toml  README.md
firmware/flight_controllers/gazebo/src/: gazebo_imu.rs  lib.rs  lib.rs.bak  main.rs
firmware/flight_controllers/src/: learn_xor.rs  lib.rs
firmware/flight_controllers/src/multicopters/: README.md
firmware/flight_controllers/src/multicopters/docs/: design.md
firmware/robots/: Cargo.toml
firmware/robots/f405-quadcopter/: Cargo.toml
firmware/robots/f405-quadcopter/.cargo/: config.toml
firmware/robots/f405-quadcopter/examples/: blinky.rs  hello_world.rs  learn_xor.rs  usb_logger.rs
firmware/robots/f405-quadcopter/src/: lib.rs
firmware/robots/gazebo-quadcopter/: Cargo.toml  README.md
firmware/robots/gazebo-quadcopter/src/: lib.rs
firmware/robots/src/: lib.rs
firmware/systems/: Cargo.toml
firmware/systems/flight-controllers/: Cargo.toml
firmware/systems/flight-controllers/src/: lib.rs
firmware/systems/src/: lib.rs
firmware/systems/src/flight_controller/: mod.rs  quadcopter.rs
firmware/systems/src/utils/: imu_position.rs  mod.rs  timebound.rs
simulator/: README.md  drone-openworld.sdf  openworld.sdf
simulator/gazebo/: README.md
simulator/gazebo/quad-copter/: README.md  autonomous-sim.sh
simulator/gazebo/quadcopter/: README.md  autonomous-sim.sh  sim-autonmous.sh
