[workspace]
resolver = "3"
members = [
    # hardware and protocols (traits and implementations)
    "drivers",

    # robot systems (traits and implementations)
    "systems",

    # example robot simulations
    "robots/gazebo-quadcopter",
]

# exclude = [
#     # physical example robots aren't included in the workspace as
#     #   the use of embassy requires specialized dependencies
#     "robots/f405-quadcopter",
# ]

[workspace.dependencies]
log = "*"
env_logger = "*"
static_cell = "*"

# embassy support
embassy-executor = { version = "*", features = ["log"] }
embassy-time = { version = "*", features = ["log"] }
embassy-sync = "*"
critical-section = "*"

# gazebo simulation support
gz = { version = "*", features = ["harmonic"] }

rusty-robot-drivers = { path = "drivers" }
rusty-robot-systems = { path = "systems" }
