[workspace]
resolver = "3"
members = [
    # shared data types
    "common",

    # hardware and protocols (traits and implementations)
    "drivers",

    # robot systems (traits and implementations)
    "systems",

    # example robot simulations
    "robots/gazebo-quadcopter",
]

exclude = [
    # hardware specific targets aren't easily supported as part of a rust workspace
    "robots/f405-quadcopter",
    "components/esp32",
]

[workspace.dependencies]
# logging support
log = "*"
env_logger = "*"

# (threads and scheduling)
embassy-executor = { version = "*", features = ["log"] }
embassy-time = { version = "*", features = ["log"] }
embassy-sync = "*"
critical-section = "*"

# gazebo simulation support
gz = { version = "*", features = ["harmonic"] }

# locally implemented
rusty-robot-common = { path = "common" }
rusty-robot-drivers = { path = "drivers" }
rusty-robot-systems = { path = "systems" }
