[package]
name = "rusty-robot-drivers"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
log = { workspace = true }

embedded-hal-async = { workspace = true }
# embedded-hal-bus = { version = "*", features = ["async"] }
nmea = { version = "*", default-features = false } # GPS sentence parsing support
