[package]
name = "rusty-robot-flight-controllers"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
log = "*"

# shared driver traits
rusty-robot-drivers = { path = "../drivers" }

# shared robot traits
rusty-robot-robots = { path = "../robots/" }

# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
#     "std",
#     "log",
# ] }

# neural network support (https://crates.io/search?q=neural-network%20no_std)
# fnn = "*"   # FIXME uses std dependency implementations
# fnn = { path = "../../../fnn/" }
