[package]
name = "rusty-robot-robots"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"


# [dependencies]
# # common dependencies
# log = "*"
# env_logger = "*"
# static_cell = "*"

# # use of embassy
# # FIXME - embassy is unable to use separate crates for embassy-executor & embassy-time
# #   so we aren't able to gather cargo by version number
# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
#     "arch-std",
#     "executor-thread",
#     "log",
# ] }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
#     "std",
# ] }
# critical-section = { version = "*", features = ["std"] }
# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
#     "std",
#     "log",
# ] }

# # gazebo sim support
# gz = { version = "*", features = ["harmonic"] }

# # shared driver traits
# rusty-robot-drivers = { path = "../../drivers" }

# # flight control systems
# rusty-robot-flight-controllers = { path = "../../flight_controllers" }


# [profile.release]
# debug = 2
