[package]
edition = "2024"
name = "rusty-robot-esp32"
rust-version = "1.88"
version = "0.1.0"

# [[bin]]
# name = "esp32"
# path = "./src/bin/main.rs"

[dependencies]
log = "*"
esp-println = { version = "*", features = ["esp32", "log-04"] }

esp-bootloader-esp-idf = { version = "*", features = ["esp32"] }
esp-hal = { version = "*", features = ["esp32", "unstable"] }
esp-rtos = { version = "*", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32",
] }
embassy-executor = { version = "*", features = [] }
embassy-time = "*"

# for more networking protocol support see https://crates.io/crates/edge-net
esp-radio = { version = "*", features = [
    # default feature "esp-alloc",
    "esp32",
    "unstable",
    "wifi",
    # "esp-now",
    # "smoltcp",
] }
# required by esp-radio
esp-alloc = "*"

# rusty-robot shared libraries
rusty-robot = { path = "../../common" }
rusty-robot-drivers = { path = "../../drivers" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 2

[profile.release]
opt-level = 2
# codegen-units = 1        # LLVM can perform better optimizations using a single thread
# debug = 2
# debug-assertions = false
# incremental = false
# lto = 'fat'
# overflow-checks = false

# https://docs.espressif.com/projects/rust/esp-wifi/0.15.0/esp32/esp_wifi/index.html#optimization-level
[profile.dev.package.esp-wifi-sys]
opt-level = 3
[profile.release.package.esp-wifi-sys]
opt-level = 3

