[package]
name = "rusty-robot-f405"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
cortex-m-rt = "*"
panic-probe = { version = "*", features = ["print-defmt"] }
embassy-stm32 = { version = "*", features = [
    "stm32f405rg",
    "memory-x",
    "defmt",
    # "unstable-pac",
    # "time-driver-tim4",
    # "exti",
    # "chrono"
] }
embassy-executor = { version = "*", features = [
    "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"
] }