[package]
name = "rusty-robot-f405-quadcopter"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
# common dependencies (note, some need features tuned toward hardware)
# defmt = "*"
# defmt-rtt = "1.0.0"
# defmt-serial = "*"
log = "*"
embassy-usb-logger = "*"
embassy-executor = { version = "*", features = [
    # "defmt",
    "log",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = "*"
embassy-usb = { version = "*", features = [
    # "defmt"
    "log",
] }
embassy-futures = { version = "*", features = [
    # "defmt"
    "log",
] }
static_cell = "*"

# hardware dependencies
cortex-m = { version = "*", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "*"
panic-reset = "*"
embassy-stm32 = { version = "*", features = [
    # "defmt",
    "log",
    "memory-x",
    "stm32f405rg",
    "time-driver-any",
    # "time-driver-tim5",
    # "time",
    # "unstable-pac",
    # "exti",
    # "chrono"
] }