[package]
name = "rusty-robot-gazebo-quadcopter"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[[bin]]
name = "gz-quadcopter-autonomous"
path = "src/bin/autonomous.rs"



[dependencies]
log = { workspace = true }
env_logger = { workspace = true }

embassy-executor = { workspace = true, features = ["arch-std", "executor-thread"] }
embassy-time = { workspace = true, features = ["std"] }
embassy-sync = { workspace = true, features = ["std"] }
critical-section = { workspace = true, features = ["std"] }

rusty-robot-common = { workspace = true }
rusty-robot-drivers = { workspace = true }
rusty-robot-systems = { workspace = true }
rusty-robot-flight-controllers = { workspace = true }

gz = { workspace = true }

[profile.release]
debug = 2
