[package]
name = "rusty-robot-flight-controllers"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
log = { workspace = true }

# rusty-robot-common = { workspace = true }
rusty-robot-drivers = { workspace = true }
rusty-robot-systems = { workspace = true }

# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
#     "std",
#     "log",
# ] }
# neural network support (https://crates.io/search?q=neural-network%20no_std)
# fnn = "*"
# num-traits = { version = "*", default-features = false }